<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context="com.barelabor.barelabor.activity.MenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"/>

            <Button
                android:id="@+id/btnScan"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:background="@drawable/custom_rounded_button"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_scan"
                />

            <Button
                android:id="@+id/btnTire"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:background="@drawable/custom_rounded_button"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_need_tire"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/btnFind"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:background="@drawable/custom_rounded_button"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_find"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/btnExperience"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:background="@drawable/custom_rounded_button"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_tell_experience"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/btnHistory"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:background="@drawable/custom_rounded_button"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_history"
                android:layout_marginTop="15dp"/>
            <Button
                android:id="@+id/btnTutor"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:background="@drawable/help"
                android:layout_gravity="end"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
