<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.barelabor.barelabor.activity.LoginActivity"
    android:background="@color/colorBackground">

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.barelabor.barelabor.widget.SegmentedGroup
                android:id="@+id/sgLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                segmentedgroup:sc_border_width="1dp"

                segmentedgroup:sc_checked_text_color="@color/colorBackground"
                segmentedgroup:sc_corner_radius="5dp"
                segmentedgroup:sc_tint_color="@android:color/white"

                >
                <RadioButton
                    android:id="@+id/btnSignup"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auth_signup"
                    android:checked="true"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/btnLogin"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auth_login"
                    android:textSize="15sp" />
            </com.barelabor.barelabor.widget.SegmentedGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="10dp"
                android:layout_marginTop="50dp">

                <ImageView
                    android:id="@+id/ivUser"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_user"/>

                <EditText
                    android:id="@+id/txtUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:hint="@string/hint_create_user"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:layout_toRightOf="@+id/ivUser"
                    android:textCursorDrawable ="@null"
                    >
                    <requestFocus />
                </EditText>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivEmail"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_email"/>

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:hint="@string/hint_email"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:layout_toRightOf="@+id/ivEmail"
                    android:textCursorDrawable ="@null"
                    >
                    <requestFocus />
                </EditText>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivPassword"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_lock_close"/>

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:hint="@string/hint_password"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:layout_toRightOf="@+id/ivPassword"
                    android:textCursorDrawable ="@null"
                    >
                </EditText>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutCPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivCPassword"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_lock_open"/>

                <EditText
                    android:id="@+id/txtCPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:hint="@string/hint_confirm_password"
                    android:textColorHint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:layout_toRightOf="@+id/ivCPassword"
                    android:textCursorDrawable ="@null"
                    >
                </EditText>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:background="@drawable/custom_rounded_button"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_submit"
                android:layout_marginTop="50dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
