<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"

    tools:context=".activity.needtire.NeedTireActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>


    <LinearLayout
        android:layout_below="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <com.barelabor.barelabor.widget.SegmentedGroup
            android:id="@+id/sgLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="1dp"

            segmentedgroup:sc_checked_text_color="@color/colorBackground"
            segmentedgroup:sc_corner_radius="5dp"
            segmentedgroup:sc_tint_color="@android:color/white"

            >
            <RadioButton
                android:id="@+id/btnByVehicle"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_by_vehicle"
                android:checked="true"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/btnBySize"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_by_size"
                android:textSize="15sp"
                android:checked="false" />
        </com.barelabor.barelabor.widget.SegmentedGroup>

        <TextView
            android:id="@+id/lblCriteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_by_vehicle"
            android:inputType="textCapCharacters"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:id="@+id/rltByVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <LinearLayout
                android:id="@+id/lltFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <Spinner
                    android:id="@+id/spinnerYear"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="35dp"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:textColor="@android:color/white"
                    android:padding="5dip"
                    android:background="@drawable/dropdown_bg_gray_small"
                    android:layout_marginRight="5dp"
                    android:spinnerMode="dropdown"
                    android:dropDownVerticalOffset="30dp">
                </Spinner>
                <Spinner
                    android:id="@+id/spinnerMake"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="35dp"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:padding="5dip"
                    android:background="@drawable/dropdown_bg_gray_small"
                    android:layout_marginRight="5dp"
                    android:spinnerMode="dropdown"
                    android:dropDownVerticalOffset="30dp">
                </Spinner>
                <Spinner
                    android:id="@+id/spinnerModel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="35dp"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:padding="5dip"
                    android:background="@drawable/dropdown_bg_gray_small"
                    android:spinnerMode="dropdown"
                    android:dropDownVerticalOffset="30dp">
                </Spinner>

            </LinearLayout>
            <Spinner
                android:id="@+id/spinnerFeatures"
                android:layout_below="@+id/lltFirst"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="20sp"
                android:gravity="left"
                android:padding="5dip"
                android:background="@drawable/dropdown_bg_gray"
                android:spinnerMode="dropdown"
                android:dropDownVerticalOffset="30dp"
                android:layout_margin="10dp">
            </Spinner>
            <Spinner
                android:id="@+id/spinnerQuantity1"
                android:layout_below="@+id/spinnerFeatures"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="20sp"
                android:gravity="left"
                android:padding="5dip"
                android:background="@drawable/dropdown_bg_gray"
                android:spinnerMode="dropdown"
                android:dropDownVerticalOffset="30dp"
                android:prompt="@string/spinner_hint_quantity"
                android:layout_margin="10dp">
            </Spinner>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rltBySize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lltSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">

                <Spinner
                    android:id="@+id/spinnerWidth"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="35dp"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:textColor="@android:color/white"
                    android:padding="5dip"
                    android:background="@drawable/dropdown_bg_gray_small"
                    android:layout_marginRight="5dp"
                    android:spinnerMode="dropdown"
                    android:dropDownVerticalOffset="30dp">
                </Spinner>
                <Spinner
                    android:id="@+id/spinnerRatio"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="35dp"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:padding="5dip"
                    android:background="@drawable/dropdown_bg_gray_small"
                    android:layout_marginRight="5dp"
                    android:spinnerMode="dropdown"
                    android:dropDownVerticalOffset="30dp">
                </Spinner>
                <Spinner
                    android:id="@+id/spinnerRim"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="35dp"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:padding="5dip"
                    android:background="@drawable/dropdown_bg_gray_small"
                    android:spinnerMode="dropdown"
                    android:dropDownVerticalOffset="30dp">
                </Spinner>

            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerQuantity2"
                android:layout_below="@+id/lltSecond"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textSize="20sp"
                android:gravity="left"
                android:padding="5dip"
                android:background="@drawable/dropdown_bg_gray"
                android:spinnerMode="dropdown"
                android:dropDownVerticalOffset="30dp"
                android:prompt="@string/spinner_hint_quantity"
                android:layout_margin="10dp">
            </Spinner>

        </RelativeLayout>
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/custom_rounded_button"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_submit"
            android:layout_marginTop="50dp"/>
    </LinearLayout>
</RelativeLayout>
